# gtest-demo

./: CMakeLists.txt
DiffTest/: filediff.py
mutator/: GenerateMutants.py  HTML.py  config.ini  containsmutant.py  filediff.py  generate_mutants.py  mutant_dictionary.py  read_xml.py
src/: example.cpp  example.h
test/: CMakeLists.txt  example_and.cpp  example_booleanfalse.cpp  example_booleantrue.cpp  example_mod.cpp  example_subtract.cpp
